--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header class="header">
                 <div class="container">
                     <div class="header__wrapper">
-                        <img src="/assets/pictures/logo.svg" alt="Логотип" class="header__logo">
+                        <img src="assets/pictures/logo.svg" alt="Логотип" class="header__logo">
                         <div class="header__menu-btn">Меню</div>
                     </div>
                 </div>
@@ -26,10 +26,10 @@
             <div class="offer">
                 <div class="container">
                     <div class="offer__wrapper">
-                        <img src="/assets/pictures/egg-left.webp" alt="egg" class="offer__egg offer__egg-left">
-                        <img src="/assets/pictures/egg-right.webp" alt="egg" class="offer__egg offer__egg-right">
-                        <img src="/assets/pictures/egg-bottom.webp" alt="egg" class="offer__egg offer__egg-bottom">
-                        <img src="/assets/pictures/card.webp" alt="Карта Проще" class="offer__card">
+                        <img src="assets/pictures/egg-left.webp" alt="egg" class="offer__egg offer__egg-left">
+                        <img src="assets/pictures/egg-right.webp" alt="egg" class="offer__egg offer__egg-right">
+                        <img src="assets/pictures/egg-bottom.webp" alt="egg" class="offer__egg offer__egg-bottom">
+                        <img src="assets/pictures/card.webp" alt="Карта Проще" class="offer__card">
                         <button class="offer__buy-btn">Приобрести карту</button>
                     </div>
                 </div>
@@ -88,8 +88,8 @@
                                     </div>
                                 </div>
                                 <object class="privileges__picture privileges__picture-right" type="image/svg+xml"
-                                    data="/assets/pictures/chat.svg">
-                                    <img src="/assets/pictures/chat.webp">
+                                    data="assets/pictures/chat.svg">
+                                    <img src="assets/pictures/chat.webp">
                                 </object>
                             </div>
                         </div>
@@ -182,15 +182,15 @@
                 <div class="container">
                     <div class="contacts__social">
                         <a href="https://facebook.com" class="contacts__link">
-                            <img src="/assets/pictures/social/Facebook icon.svg" alt="facebook link"
+                            <img src="assets/pictures/social/Facebook icon.svg" alt="facebook link"
                                 class="contacts__linkPic-fb">
                         </a>
                         <a href="https://instagram.com" class="contacts__link">
-                            <img src="/assets/pictures/social/Instagram icon.svg" alt="instagram link"
+                            <img src="assets/pictures/social/Instagram icon.svg" alt="instagram link"
                                 class="contacts__linkPic-inst">
                         </a>
                         <a href="https://vk.com" class="contacts__link">
-                            <img src="/assets/pictures/social/VK icon.svg" alt="vk link" class="contacts__linkPic-vk">
+                            <img src="assets/pictures/social/VK icon.svg" alt="vk link" class="contacts__linkPic-vk">
                         </a>
                     </div>
                 </div>
@@ -391,7 +391,7 @@
         </svg>
     </div>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
 </body>
 
 </html>
