update css for animation

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
                                             у партнеров бонусной программы</p>
                                     </div>
                                 </div>
-                                <object class="privileges__picture" type="image/svg+xml" data="./assets/pictures/pay.svg">
+                                <object class="privileges__picture" type="image/svg+xml" data="assets/pictures/pay.svg">
 
-                                    <img src="./assets/pictures/pay.webp">
+                                    <img src="assets/pictures/pay.webp">
                                 </object>
                             </div>
                             <div class="privileges__item">
                                 <object class="privileges__picture" type="image/svg+xml"
                                     data="assets/pictures/fireExtinguisher.svg">
-                                    <img src="./assets/pictures/fireExtinguisher.webp">
+                                    <img src="assets/pictures/fireExtinguisher.webp">
                                 </object>
                                 <div class="privileges__text">
                                     <h2 class="privileges__title">Бонусы не сгорают</h2>
@@ -88,8 +88,8 @@
                                     </div>
                                 </div>
                                 <object class="privileges__picture privileges__picture-right" type="image/svg+xml"
-                                    data="./assets/pictures/chat.svg">
-                                    <img src="./assets/pictures/chat.webp">
+                                    data="assets/pictures/chat.svg">
+                                    <img src="assets/pictures/chat.webp">
                                 </object>
                             </div>
                         </div>
