--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 <body>
 
     <div class="elastic">
-        <div class="white">
+        <div class="white top">
             <header class="header">
                 <div class="container">
                     <div class="header__wrapper">
@@ -56,16 +56,17 @@
                                             у партнеров бонусной программы</p>
                                     </div>
                                 </div>
-                                <object class="privileges__picture" type="image/svg+xml" data="assets/pictures/pay.svg">
-
+                                <img class="privileges__picture" src="assets/pictures/Pay.png" alt="pay">
+                                <!-- <object class="privileges__picture" type="image/svg+xml" data="assets/pictures/pay-test.svg">
                                     <img src="assets/pictures/pay.webp">
-                                </object>
+                                </object> -->
                             </div>
                             <div class="privileges__item">
-                                <object class="privileges__picture" type="image/svg+xml"
+                                <img class="privileges__picture" src="assets/pictures/Bonus.png" alt="bonus">
+                                <!-- <object class="privileges__picture" type="image/svg+xml"
                                     data="assets/pictures/fireExtinguisher.svg">
                                     <img src="assets/pictures/fireExtinguisher.webp">
-                                </object>
+                                </object> -->
                                 <div class="privileges__text">
                                     <h2 class="privileges__title">Бонусы не сгорают</h2>
                                     <div class="privileges__description">
@@ -87,10 +88,11 @@
                                             в вашем телефоне</p>
                                     </div>
                                 </div>
-                                <object class="privileges__picture privileges__picture-right" type="image/svg+xml"
+                                <img class="privileges__picture privileges__picture-right" src="assets/pictures/Chat.png" alt="chat">
+                                <!-- <object class="privileges__picture privileges__picture-right" type="image/svg+xml"
                                     data="assets/pictures/chat.svg">
                                     <img src="assets/pictures/chat.webp">
-                                </object>
+                                </object> -->
                             </div>
                         </div>
                         <div class="privilege__ending">
@@ -104,7 +106,7 @@
                 <div class="container">
                     <div class="promo__wrapper">
                         <div class="promo__text stroke-3">
-                            Всего за <span class="stroke-none">49 ₽<span class="stroke-2">49 ₽</span></span>
+                            Всего<br class="hide"> за <span class="stroke-none">49 ₽<span class="stroke-2">49 ₽</span></span>
                             покупай то<br>
                             о чем другие
                             мечтают
@@ -147,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="contacts">
+            <footer class="contacts">
                 <div class="container">
                     <h1 class="contacts__title">Контакты</h1>
                 </div>
@@ -194,12 +196,209 @@
                         </a>
                     </div>
                 </div>
+            </footer>
+        </div>
+        <div class="darken bottom">
+            <header class="header">
+                <div class="container">
+                    <div class="header__wrapper">
+                        <!-- <img src="/assets/pictures/whiteLogo.svg" alt="Логотип" class="header__logo"> -->
+                        <img src="dark-logo.svg" alt="Логотип" class="header__logo">
+                        <div class="header__menu-btn">Меню</div>
+                    </div>
+                </div>
+            </header>
+            <div class="ticker">
+                <div class="ticker__text"></div>
+            </div>
+            <div class="offer">
+                <div class="container">
+                    <div class="offer__wrapper">
+                        <img src="assets/pictures/bag-left.webp" alt="bag" class="offer__egg offer__egg-left offer__bag offer__bag-left">
+                        <img src="assets/pictures/bag-right.webp" alt="bag" class="offer__egg offer__egg-right offer__bag offer__bag-right">
+                        <img src="assets/pictures/bag-bottom.webp" alt="bag" class="offer__egg offer__egg-bottom offer__bag offer__bag-bottom">
+                        <img src="assets/pictures/card.webp" alt="Карта Проще" class="offer__card">
+                        <button class="offer__buy-btn">Приобрести карту</button>
+                    </div>
+                </div>
+            </div>
+            <div class="privilege">
+                <div class="container">
+                    <div class="privilege__wrapper">
+                        <div class="privilege__header stroke-3-white"><span class="stroke-none">ПРОЩЕ</span>ЧЕМ<br>ВЫ
+                            ДУМАЕТЕ
+                        </div>
+                        <div class="privilege__title">
+                            <h1 class="privilege__sub_title">ПОТОМУ ЧТО</h1>
+                            <p class="privilege__sup_title stroke-3-white">С бонусной системой:</p>
+                        </div>
+                        <div class="privileges">
+                            <div class="privileges__item">
+                                <div class="privileges__text">
+                                    <h2 class="privileges__title">Привлечение<br>новых клиентов</h2>
+                                    <div class="privileges__description">
+                                        <p>Клиенты не уйдут к конкурентам, чтобы не потерять накопленные бонусы и скидки
+                                        </p>
+                                    </div>
+                                </div>
+                                
+                                <object class="privileges__picture" type="image/svg+xml" data="assets/pictures/pay.svg">
+                                    <img src="assets/pictures/pay.webp">
+                                </object>
+                            </div>
+                            <div class="privileges__item">
+                                <img class="privileges__picture" src="assets/pictures/Bonus.png" alt="bonus">
+                                <!-- <object class="privileges__picture" type="image/svg+xml"
+                                    data="assets/pictures/fireExtinguisher.svg">
+                                    <img src="assets/pictures/fireExtinguisher.webp">
+                                </object> -->
+                                <div class="privileges__text">
+                                    <h2 class="privileges__title">Повторные покупки</h2>
+                                    <div class="privileges__description">
+                                        <p>Клиенты позволят себе приходить чаще, если вы предложите им накопительную
+                                            скидку
+                                            либо кэшбек</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="privileges__item">
+                                <div class="privileges__text">
+                                    <h2 class="privileges__title">Увеличение<br>среднего чека</h2>
+                                    <div class="privileges__description">
+                                        <p>Клиенты с большей вероятностью будут заказывать дополнительные услуги за счет
+                                            снижения суммы основной покупки</p>
+
+                                    </div>
+                                </div>
+                                <object class="privileges__picture privileges__picture-right" type="image/svg+xml"
+                                    data="assets/pictures/chat.svg">
+                                    <img src="assets/pictures/chat.webp">
+                                </object>
+                            </div>
+                        </div>
+                        <div class="privilege__ending">
+                            <h2 class="privilege__text">Бонусных карт<br>
+                                выдано</h2>
+                            <p class="privilege__count"><span class="stroke-3-white">20 000</span> шт.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="promo">
+                <div class="container">
+                    <div class="promo__wrapper">
+                        <div class="promo__text stroke-3-white">
+
+                            <span class="stroke-2-white">
+                                “ПРОЩЕ”
+                                <span class="stroke-none">“ПРОЩЕ”</span>
+                            </span><br>
+                            ПОДХОДИТ для<br>
+                            <span class="stroke-2-white">
+                                любой
+                                <span class="stroke-none">любой</span>
+                            </span> сферы<br>
+                            бизнеса
+                        </div>
+                        <div class="promo__controls">
+                            <div class="promo__buy-btn">
+                                <button class="offer__buy-btn">Стать партнером</button>
+                            </div>
+                            <div class="promo__play-btn">
+                                <div class="promo__play-btn-after"></div>
+                                <div class="promo__play-btn-before"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="partners">
+                <div class="container">
+                    <div class="partners__wrapper">
+                        <h1 class="partners__title">УЖЕ С НАМИ</h1>
+                        <div class="partners__companys">
+                            <div class="partners__column">
+                                <div class="partners__company partners__c1"></div>
+                                <div class="partners__company partners__c5"></div>
+                            </div>
+                            <div class="partners__column">
+                                <div class="partners__company partners__c2"></div>
+                                <div class="partners__company partners__c6"></div>
+                            </div>
+                            <div class="partners__column">
+                                <div class="partners__company partners__c3"></div>
+                                <div class="partners__company partners__c7"></div>
+                            </div>
+                            <div class="partners__column">
+                                <div class="partners__company partners__c4"></div>
+                                <div class="partners__company partners__c8"></div>
+                            </div>
+                        </div>
+                        <div class="partners__more-btn disabled"><span>Смотреть ещё</span></div>
+                    </div>
+                </div>
+            </div>
+            <div class="contacts">
+                <div class="container">
+                    <h1 class="contacts__title">Контакты</h1>
+                </div>
+                <div class="container">
+                    <div class="contacts__wrapper">
+                        <div class="contacts__left">
+                            <div class="contacts__information">
+                                <div class="contacts__email">proshe@info.com</div>
+                                <div class="contacts__custumers">
+                                    <h2 class="contacts__text">Для юридических лиц</h2>
+                                    <div class="contacts__phone">+7 908 656 65 65</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contacts__right">
+                            <form class="contacts__custumer-form" action="">
+                                <input type="text" name="name" id="name" placeholder="Имя" required>
+                                <input type="email" name="email" id="email" placeholder="Email" required>
+                                <textarea rows="4" placeholder="Комментарий"></textarea>
+
+                                <div class="contacts__checkbox_wrapper">
+                                    <input type="checkbox" name="business" id="business">
+                                    <label for="business">Согласие на обработку персональных данных</label>
+                                </div>
+                                <div class="contacts__submit_wrapper">
+                                    <button type="submit">Отправить</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="contacts__social">
+                        <a href="https://facebook.com" class="contacts__link">
+                            <img src="assets/pictures/social/Facebook icon-darken.svg" alt="facebook link"
+                                class="contacts__linkPic-fb">
+                        </a>
+                        <a href="https://instagram.com" class="contacts__link">
+                            <img src="assets/pictures/social/Instagram icon-darken.svg" alt="instagram link"
+                                class="contacts__linkPic-inst">
+                        </a>
+                        <a href="https://vk.com" class="contacts__link">
+                            <img src="assets/pictures/social/VK icon-darken.svg" alt="vk link"
+                                class="contacts__linkPic-vk">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-
+        <svg class="svg-slider" fill="black">
+            <defs>
+                <clipPath id="myPath">
+                    <rect />
+                </clipPath>
+            </defs>
+        </svg>
     </div>
 
     <!-- <script src="js/main.js"></script> -->
+    <script src="test.js"></script>
 </body>
 
 </html>
