add modal window, add media query

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
 </head>
 
 <body>
+    <div class="modal-buy">
+        <div class="modal-buy__wrapper">
+            <header class="header">
+                <div class="container">
+                    <div class="header__wrapper">
+                        <img src="assets/pictures/logo.svg" alt="Логотип" class="header__logo">
+                        <div class="header__menu-btn">Меню</div>
+                    </div>
+                </div>
+            </header>
+            <div class="modal-buy__inner_wrapper">
+                <h2 class="modal-buy__title">ПРИОБРЕСТИ КАРТУ</h2>
+                <form action="/purchase" class="modal-buy__purchase_card">
+                    <input type="text" name="name" id="name" placeholder="Имя" required>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                    <input type="tel" name="phone" id="phone" placeholder="Номер телефона" pattern="\+?[0-9\s\-\(\)]+" minlength="11" maxlength="12" required>
+                    <div class="modal-buy__consent-purchase">
+                        <input type="checkbox" name="consent-purchase" id="consent-purchase">
+                        <label for="consent-purchase">Согласие на обработку персональных данных</label>
+                        <button class="offer__buy-btn modal-buy__purchase-btn" type="submit">Купить</button>
+                    </div>
+                    <div class="modal-buy__hint">* После оплаты на указанный номер придет
+                        номер карты и пароль.<br> Карту можно забрать у любого
+                        партнера программы.</div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <div class="elastic">
         <div class="white top">
@@ -26,11 +54,23 @@
             <div class="offer">
                 <div class="container">
                     <div class="offer__wrapper">
-                        <img src="assets/pictures/egg-left.webp" alt="egg" class="offer__egg offer__egg-left">
-                        <img src="assets/pictures/egg-right.webp" alt="egg" class="offer__egg offer__egg-right">
-                        <img src="assets/pictures/egg-bottom.webp" alt="egg" class="offer__egg offer__egg-bottom">
-                        <img src="assets/pictures/card.webp" alt="Карта Проще" class="offer__card">
-                        <button class="offer__buy-btn">Приобрести карту</button>
+                        <picture>
+                            <source srcset="assets/pictures/egg-left.webp">
+                            <img src="assets/pictures/egg-left.png" alt="egg" class="offer__egg offer__egg-left">
+                        </picture>
+                        <picture>
+                            <source srcset="assets/pictures/egg-right.webp">
+                            <img src="assets/pictures/egg-right.png" alt="egg" class="offer__egg offer__egg-right">
+                        </picture>
+                        <picture>
+                            <source srcset="assets/pictures/egg-bottom.webp">
+                            <img src="assets/pictures/egg-bottom.png" alt="egg" class="offer__egg offer__egg-bottom">
+                        </picture>
+                        <picture>
+                            <source srcset="assets/pictures/card.webp">
+                            <img src="assets/pictures/card.png" alt="Карта Проще" class="offer__card">
+                        </picture>
+                        <button class="offer__buy-btn offer__purchase-card">Приобрести карту</button>
                     </div>
                 </div>
             </div>
@@ -88,7 +128,8 @@
                                             в вашем телефоне</p>
                                     </div>
                                 </div>
-                                <img class="privileges__picture privileges__picture-right" src="assets/pictures/Chat.png" alt="chat">
+                                <img class="privileges__picture privileges__picture-right"
+                                    src="assets/pictures/Chat.png" alt="chat">
                                 <!-- <object class="privileges__picture privileges__picture-right" type="image/svg+xml"
                                     data="assets/pictures/chat.svg">
                                     <img src="assets/pictures/chat.webp">
@@ -106,7 +147,8 @@
                 <div class="container">
                     <div class="promo__wrapper">
                         <div class="promo__text stroke-3">
-                            Всего<br class="hide"> за <span class="stroke-none">49 ₽<span class="stroke-2">49 ₽</span></span>
+                            Всего<br class="hide"> за <span class="stroke-none">49 ₽<span class="stroke-2">49
+                                    ₽</span></span>
                             покупай то<br>
                             о чем другие
                             мечтают
@@ -214,11 +256,26 @@
             <div class="offer">
                 <div class="container">
                     <div class="offer__wrapper">
-                        <img src="assets/pictures/bag-left.webp" alt="bag" class="offer__egg offer__egg-left offer__bag offer__bag-left">
-                        <img src="assets/pictures/bag-right.webp" alt="bag" class="offer__egg offer__egg-right offer__bag offer__bag-right">
-                        <img src="assets/pictures/bag-bottom.webp" alt="bag" class="offer__egg offer__egg-bottom offer__bag offer__bag-bottom">
-                        <img src="assets/pictures/card.webp" alt="Карта Проще" class="offer__card">
-                        <button class="offer__buy-btn">Приобрести карту</button>
+                        <picture>
+                            <source srcset="assets/pictures/bag-left.webp">
+                            <img src="assets/pictures/bag-left.png" alt="bag"
+                                class="offer__egg offer__egg-left offer__bag offer__bag-left">
+                        </picture>
+                        <picture>
+                            <source srcset="assets/pictures/bag-right.webp">
+                            <img src="assets/pictures/bag-right.png" alt="bag"
+                                class="offer__egg offer__egg-right offer__bag offer__bag-right">
+                        </picture>
+                        <picture>
+                            <source srcset="assets/pictures/bag-bottom.webp">
+                            <img src="assets/pictures/bag-bottom.png" alt="bag"
+                                class="offer__egg offer__egg-bottom offer__bag offer__bag-bottom">
+                        </picture>
+                        <picture>
+                            <source srcset="assets/pictures/card.webp">
+                            <img src="assets/pictures/card.png" alt="Карта Проще" class="offer__card">
+                        </picture>
+                        <button class="offer__buy-btn offer__partner-btn">Стать партнером</button>
                     </div>
                 </div>
             </div>
@@ -241,7 +298,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                
+
                                 <object class="privileges__picture" type="image/svg+xml" data="assets/pictures/pay.svg">
                                     <img src="assets/pictures/pay.webp">
                                 </object>
