--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                                     </div>
                                 </div>
                                 <picture>
-                                    <source media="(max-width: 320px)" srcset="assets/pictures/pay.webp" type="image/webp">
+                                    <source media="(min-width: 320px)" srcset="assets/pictures/pay.webp" type="image/webp">
                                     <img class="privileges__picture" src="assets/pictures/pay-test.svg" alt="paycard">
                                     <picture>
-                                        <source media="(max-width: 320px)" srcset="assets/pictures/card-terminal320.png">
+                                        <source media="(min-width: 320px)" srcset="assets/pictures/card-terminal320.png">
                                         <img class="card-terminal" src="assets/pictures/card-terminal.png" alt="card terminal">
                                     </picture>
                                     <picture>
-                                        <source media="(max-width: 320px)" srcset="assets/pictures/shadow320.png">
+                                        <source media="(min-width: 320px)" srcset="assets/pictures/shadow320.png">
                                         <img class="terminal-shadow" src="assets/pictures/shadow.png" alt="shadow terminal">
                                     </picture>
                                     <picture>
@@ -118,7 +118,7 @@
                                         <img class="one-money" src="assets/pictures/one-money.svg" alt="money">
                                     </picture>
                                     <picture>
-                                        <source media="(max-width: 320px)" srcset="assets/pictures/two-money320.png">
+                                        <source media="(min-width: 320px)" srcset="assets/pictures/two-money320.png">
                                         <img class="two-money" src="assets/pictures/two-money.png" alt="money">
                                     </picture>
                                 </picture>
