--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
                                     <source media="(max-width: 425px)" srcset="assets/pictures/pay.webp" type="image/webp">
                                     <img class="privileges__picture" src="assets/pictures/pay-test.svg" alt="paycard">
                                     <picture>
-                                        <source media="(max-width: 425px)" srcset="assets/pictures/card-terminal320.png">
+                                        <source media="(max-width: 550px)" srcset="assets/pictures/card-terminal320.png">
                                         <img class="card-terminal" src="assets/pictures/card-terminal.png" alt="card terminal">
                                     </picture>
                                     <picture>
-                                        <source media="(max-width: 425px)" srcset="assets/pictures/shadow320.png">
+                                        <source media="(max-width: 550px)" srcset="assets/pictures/shadow320.png">
                                         <img class="terminal-shadow" src="assets/pictures/shadow.png" alt="shadow terminal">
                                     </picture>
                                     <picture>
-                                        <!-- <source media="(min-width: 320px)" srcset="assets/pictures/one-money320.png"> -->
-                                        <img class="one-money" src="assets/pictures/one-money.svg" alt="money">
+                                        <source media="(max-width: 550px)" srcset="assets/pictures/one-money320.png">
+                                        <img class="one-money" src="assets/pictures/one-money.png" alt="money">
                                     </picture>
                                     <picture>
-                                        <source media="(max-width: 425px)" srcset="assets/pictures/two-money320.png">
+                                        <source media="(max-width: 550px)" srcset="assets/pictures/two-money320.png">
                                         <img class="two-money" src="assets/pictures/two-money.png" alt="money">
                                     </picture>
                                 </picture>
@@ -282,8 +282,9 @@
                     </div>
                 </div>
             </header>
-            <div class="ticker">
-                <div class="ticker__text"></div>
+            <div class="marquee">
+                <img class="marquee__img" src="assets/pictures/rollTextDarken.svg" alt="rolling text">
+                <!-- <img class="marquee__img" src="assets/pictures/rollText.svg" alt="rolling text"> -->
             </div>
             <div class="offer">
                 <div class="container">
