working on sidebar

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
             </div>
         </div>
         <svg class="svg-slider" fill="black">
-            <rect />
+            <rect fill="#333" />
             <defs>
                 <clipPath id="myPath">
                     <rect />
