--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
                 <div class="container">
                     <div class="offer__wrapper">
                         <picture>
-                            <source srcset="assets/pictures/card.webp">
+                            <source srcset="assets/pictures/card.webp" type="image/webp">
                             <img src="assets/pictures/card.png" alt="Карта Проще" class="offer__card">
                             <picture>
-                                <source srcset="assets/pictures/egg-left.webp">
+                                <source srcset="assets/pictures/egg-left.webp" type="image/webp">
                                 <img src="assets/pictures/egg-left.png" alt="egg" class="offer__egg offer__egg-left">
                             </picture>
                             <picture>
-                                <source srcset="assets/pictures/egg-right.webp">
+                                <source srcset="assets/pictures/egg-right.webp" type="image/webp">
                                 <img src="assets/pictures/egg-right.png" alt="egg" class="offer__egg offer__egg-right">
                             </picture>
                             <picture>
-                                <source srcset="assets/pictures/egg-bottom.webp">
+                                <source srcset="assets/pictures/egg-bottom.webp" type=image/webp>
                                 <img src="assets/pictures/egg-bottom.png" alt="egg"
                                     class="offer__egg offer__egg-bottom">
                             </picture>
