--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- <div class="overlay"> -->
-        <div class="modal-buy">
+        <!-- <div class="modal-buy">
             <div class="modal-buy__wrapper">
                 <header class="header">
                     <div class="container">
@@ -41,7 +41,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </div> -->
     <!-- </div> -->
 
     <div class="elastic">
@@ -62,7 +62,7 @@
                 <div class="container">
                     <div class="offer__wrapper">
                         <picture>
-                            <source srcset="assets/pictures/card.webp" type="image/webp">
+                            <!-- <source srcset="assets/pictures/card.webp" type="image/webp"> -->
                             <img src="assets/pictures/card.png" alt="Карта Проще" class="offer__card">
                             <picture>
                                 <source srcset="assets/pictures/egg-left.webp" type="image/webp">
