--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <picture>
                             <!-- <source srcset="assets/pictures/card.webp" type="image/webp"> -->
                             <img src="assets/pictures/card.png" alt="Карта Проще" class="offer__card">
-                            <picture>
+                            <!-- <picture>
                                 <source srcset="assets/pictures/egg-left.webp" type="image/webp">
                                 <img src="assets/pictures/egg-left.png" alt="egg" class="offer__egg offer__egg-left">
                             </picture>
@@ -76,7 +76,7 @@
                                 <source srcset="assets/pictures/egg-bottom.webp" type=image/webp>
                                 <img src="assets/pictures/egg-bottom.png" alt="egg"
                                     class="offer__egg offer__egg-bottom">
-                            </picture>
+                            </picture> -->
                         </picture>
                         <button class="offer__buy-btn offer__purchase-card">Приобрести карту</button>
                     </div>
